# TACT

./: .env.template  .gitignore  README.md  app.py  main.py  pyproject.py  pyproject.toml  test.ipynb
api/: main.py
bot/: main.py
bot/cogs/: chat_filter_cog.py  chat_filter_cog.toml  help.py  rpg_cog.py
bot/general/: blacklist.txt  filter.py  help.py  monitor.py
bot/rpg/: admin.py  board.py  farm.py  gift.py  test.py
core/: ai.py  database.py  dynamic_import.py  importx.py  user.py  utils.py
core/db/: model.py  user.py
